Fixed image URl with new API, improved layout on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,7 @@ footer img {
   .pokemon-logo {
     all: revert;
     width: 9rem;
+    margin-bottom: 1.5rem;
   }
   .pokeball {
     height: 1.5rem;
@@ -218,7 +219,7 @@ footer img {
     font-size: 0.9rem;
   }
 
-  /* .pokemon {
+  .pokemon {
     height: 18.75rem;
     width: 10.5rem;
     margin: 0.5rem;
@@ -234,10 +235,6 @@ footer img {
   }
   .type-data {
     margin-top: 0.5rem;
-  } */
-  .pokemon {
-    transform: scale(0.8);
-    margin: 0;
   }
 
   @-moz-document url-prefix('') {
